# BackendFungi/Contracts/Requests/UsersRequests/UpdateUserRequestSmallParam.cs
@@ -1,6 +1,5 @@
 ﻿namespace BackendFungi.Contracts.Requests.UsersRequests;
 
 public record UpdateUserRequestSmallParam(
-    string UserEmail,
     string? NewName
 );
